--- a/docs/faststore/components/features/delivery-promise/components.mdx
+++ b/docs/faststore/components/features/delivery-promise/components.mdx
@@ -23,7 +23,7 @@ Below are the core components related to the Delivery Promise feature in FastSto
 Its behavior is context-dependent:
 
 - If a shopper hasn't added a postal code, a `Popover` is displayed, and the button label adjusts based on whether a default postal code is present.
-- If a postal code is added, the button shows the location and suppresses the `Popover`.
+- If a postal code is set, the button shows the location and suppresses the `Popover`.
 - When a shopper sets their location, the [`RegionModal`](#regionmodal) component is triggered.
 
 ![RegionButton](https://vtexhelp.vtexassets.com/assets/docs/src/region-button___ccb03f5e9e36d837a4b03aae6a0a58ff.png)
@@ -53,12 +53,12 @@ This component leverages the following:
 Its behavior is context-dependent:
 
 - If a shopper hasn't added a postal code, a `Popover` is displayed, and the button label adjusts based on whether a default postal code is present.
-- If a postal code is added, the button shows the location and suppresses the `Popover`.
+- If a postal code is set, the button shows the location and suppresses the `Popover`.
 - When a shopper sets their location, the [`RegionModal`](#regionmodal) component is triggered.
 
 ![RegionBar](https://vtexhelp.vtexassets.com/assets/docs/src/regionbar80___52615261c9d206fd8e305d92751c00b5.png)
 
-Even if you have customized the `NavBar`, you can still use the native `RegionBar` component to use Delivery Promise.
+Even if you have customized the `NavBar`, you can still use the native `RegionBar` component to enable Delivery Promise.
 
 This component leverages the following:
 
